--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-pdf": "^9.1.0",
+    "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
     "react-world-flags": "^1.6.0",
     "web-vitals": "^2.1.4"
