--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-pdf": "^9.1.0",
     "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-world-flags": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
