--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,15 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-pdf": "^9.1.0",
+    "react-pdftotext": "^1.3.0",
     "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-world-flags": "^1.6.0",
     "web-vitals": "^2.1.4"
+  },
+  "resolutions": {
+    "pdfjs-dist": "^3.0.279"
   },
   "scripts": {
     "start": "react-scripts start",
