--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.453.0",
+    "pdfjs-dist": "^4.7.76",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-pdf": "^9.1.1",
     "react-scripts": "5.0.1",
     "react-world-flags": "^1.6.0",
     "web-vitals": "^2.1.4"
